[package]
name = "st-docker"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Terminal UI for Docker containers (ratatui + bollard)"

[[bin]]
name = "st-docker"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
bollard.workspace = true
clap.workspace = true
crossterm.workspace = true
futures-util.workspace = true
ratatui.workspace = true
st-common.workspace = true
tokio.workspace = true
tracing.workspace = true
