[package]
name = "st-network"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Terminal UI for network interfaces and listeners (ratatui)"

[[bin]]
name = "st-network"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
crossterm.workspace = true
ratatui.workspace = true
st-common.workspace = true
sysinfo.workspace = true
tracing.workspace = true
