[package]
name = "st-system"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Terminal UI for CPU, memory, disks, and processes (ratatui)"

[[bin]]
name = "st-system"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
crossterm.workspace = true
ratatui.workspace = true
st-common.workspace = true
sysinfo.workspace = true
tracing.workspace = true
